crates/wac-parser/tests/resolution/fail/export-dep-name.wac
package test:comp;

import f: func();
export f as "locked-dep=<foo:bar>";